--- a/week02/styles/temple.css
+++ b/week02/styles/temple.css
@@ -25,7 +25,7 @@ h1 {
 img {
     width: 100%;
     height: auto;
-    box-shadow: 0px 0px 30px grey;
+    box-shadow: 0px 0px 30px rgb(44, 42, 42)
 }
 
 section {
