--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: darkblue;
+    background-color: rgb(15, 5, 71);
     padding: 10px;
 }
 
@@ -9,11 +9,30 @@ nav a {
     padding: 20px;
 }
 
-h1 {
-    color: darkblue;
+main {
+    max-width: 840px;
 }
 
-img {
+aside {
+    width: 20em;
+    margin: 1em;
+    border: 1px solid rgb(0 0 0 / 0.2);
+    padding: 1em;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+
+h1 {
+    color: rgb(15, 5, 71);
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -22,5 +41,11 @@ img {
 }
 
 p {
-    padding: 10px;
+    padding: 0px;
+}
+
+footer {
+    text-align: center;
+    border-top: 1px solid #000;
+    margin-top: 15px;
 }
