--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -71,17 +71,19 @@ h2 {
 .hero article {
     position: absolute;
     bottom: 20px;
-    left: 300px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 83%;
     background-color: rgba(255, 255, 255, 0.8);
-    padding: 16px;
-    max-width: 1000px;
+    padding: 12px;
+    max-width: 1300px;
 }
 
 .hero article img {
     width: 100px;
     height: auto;
     float: right;
-    margin: 16px;
+    margin: 5px;
 }
 
 /* Client image */
