--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,23 +4,35 @@
     box-sizing: border-box;
 }
 
+header,
+.grid footer {
+    max-width: 100%;
+    margin: 0 auto;
+}
+
 nav {
     background-color: rgb(15, 5, 71);
-    padding: 10px;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
     color: white;
     display: block;
     padding: 20px;
+    text-decoration: none;
 }
 
 main {
     max-width: 840px;
+    margin: 1rem;
+    grid-column: 2;
 }
 
 aside {
-    width: 20em;
+    width: 20rem;
     margin: 1em;
     border: 1px solid rgb(0 0 0 / 0.2);
     padding: 1em;
@@ -28,6 +40,8 @@ aside {
     color: #333;
     text-align: center;
     position: relative;
+    grid-column: 1;
+    grid-row: 1;
 }
 
 h1 {
@@ -70,11 +84,17 @@ footer {
 /* Class Selector */
 
 .box {
-    margin: 1rem;
+    margin: 8px auto;
     border: 1px solid rgba(0 0 0 / 10%);
     padding: 1rem;
     background-color: #ddd;
     color: #000;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .indent {
