--- a/week04/styles/layout-exercises.css
+++ b/week04/styles/layout-exercises.css
@@ -23,17 +23,25 @@ div {
 
 .flex {
     background-color: #aba;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /* write declarations here */
 
 }
 
 .grid {
     background-color: #abb;
+    display: grid;
+    place-items: center;
     /* enter declarations here */
 
 }
 
 .container2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     /* write declarations here */
 
 }
@@ -44,11 +52,16 @@ div {
 }
 
 .container3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
     /* write declarations here */
 
 }
 
 .columns-3 {
+    grid-column: span 3;
+    text-align: center;
     /* write declaration here */
 
 }
