--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -342,7 +342,7 @@ footer {
 }
 
 .form .checkbox-group label {
-    font-weight: 600px;
+    font-weight: 600;
     cursor: pointer;
     margin-bottom: 5px;
 }
