--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -85,11 +85,10 @@ h2 {
 
 .hero h1 {
     position: absolute;
-    top: 20px;
-    left: 0;
+    top: 0;
     text-align: center;
     color: var(--accent2-color);
-    font-size: 35px;
+    font-size: 2em;
     background-color: var(--primary-color);
     width: 100%;
     font-family: var(--heading-font)
@@ -191,22 +190,13 @@ footer {
     margin: 0;
 }
 
-.contact-section h1 {
-    position: static;
-    margin-bottom: 35px;
-    margin-top: 0;
-    background-color: var(--primary-color);
-    color: var(--accent2-color);
-    text-align: center !important;
-}
-
 .contact-info li {
     list-style: none;
     margin-bottom: 12px;
 }
 
 .contact-info {
-    margin-bottom: 35px;
+    margin: 60px 0 30px;
     text-align: center;
 }
 
@@ -448,7 +438,7 @@ button:hover {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 30px;
     max-width: 1200px;
-    margin: 40px auto;
+    margin: 30px auto;
     padding: 0 20px;
 }
 
@@ -496,6 +486,6 @@ button:hover {
 }
 
 .cta p {
-    margin: 40px;
+    margin: 30px 30px 10px;
     font-size: large;
 }
