--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -418,6 +418,7 @@ button:hover {
     background-color: var(--section-bg-color);
     border-radius: 16px;
     padding: 15px;
+    text-align: center;
 }
 
 .grid-item {
