--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -436,16 +436,16 @@ button:hover {
 
 .trip-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    max-width: 1200px;
-    margin: 30px auto;
-    padding: 0 20px;
+    width: 100%;
+    max-width: 1300px;
+    margin: 50px 0 0;
 }
 
 .trip-item img {
     width: 100%;
-    max-width: 300px;
+    max-width: 350px;
     display: block;
     margin: 0 auto 15px;
     border-radius: 12px;
@@ -453,14 +453,13 @@ button:hover {
 
 .trip-item h3,
 .trip-item p {
-    width: 100%;
     text-align: center;
 }
 
 .trips-table table {
     width: 100%;
     border-collapse: collapse;
-    margin: 30px auto;
+    margin: 0px auto;
 }
 
 .trips-table th,
