--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -223,7 +223,7 @@ footer {
     background-color: var(--primary-color);
     color: var(--accent2-color);
     cursor: pointer;
-    width: 92%;
+    width: 91%;
     border: none;
     border-radius: 12px;
     padding: 14px;
@@ -366,9 +366,10 @@ footer {
     color: var(--accent2-color);
     padding: 14px 28px;
     border-radius: 16px;
-    text-decoration: none;
     font-size: 18px;
     font-weight: bold;
+    cursor: pointer;
+    border: none;
 }
 
 .cta-button:hover .button2:hover,
